--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <p class="p1">&lt;!DOCTYPE html&gt;</p>
 <p class="p1">&lt;html&gt;</p>
 <p class="p1">&lt;head&gt;</p>
-<p class="p1"><span class="Apple-converted-space">  </span>&lt;title&gt;Insekten-Quiz&lt;/title&gt;</p>
+<p class="p1"><span class="Apple-converted-space">  </span>&lt;title&gt;Schadinsekten-Quiz&lt;/title&gt;</p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;style&gt;</p>
 <p class="p1"><span class="Apple-converted-space">    </span>body { font-family: Arial, sans-serif; text-align: center; }</p>
 <p class="p1"><span class="Apple-converted-space">    </span>img { max-width: 300px; height: auto; }</p>
@@ -31,36 +31,36 @@
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;script&gt;</p>
 <p class="p1"><span class="Apple-converted-space">    </span>// Datenbank der Insekten</p>
 <p class="p1"><span class="Apple-converted-space">    </span>const insects = [</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "reismehlkaefer.jpg", "name": "Reismehlkäfer"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "brotkaefer.jpg", "name": "Brotkäfer"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "mehlkaefer.jpg", "name": "Mehlkäfer"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "getreideplattkaefer.jpg", "name": "Getreideplattkäfer"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "kornkaefer.jpg", "name": "Kornkäfer"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "reiskaefer.jpg", "name": "Reiskäfer"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "doerrobstmotte.jpg", "name": "Dörrobstmotte"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "mehlmotte.jpg", "name": "Mehlmotte"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "kakaomotte.jpg", "name": "Kakaomotte"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "mehlmilbe.jpg", "name": "Mehlmilbe"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "stubenfliege.jpg", "name": "Stubenfliege"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "schmeissfliege.jpg", "name": "Schmeißfliege"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "fruchtfliege.jpg", "name": "Fruchtfliege"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "deutsche_schabe.jpg", "name": "Deutsche Schabe"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "orientalische_schabe.jpg", "name": "Orientalische Schabe"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "amerikanische_schabe.jpg", "name": "Amerikanische Schabe"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "schwarze_wegameise.jpg", "name": "Schwarze Wegameise"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "pharaoameise.jpg", "name": "Pharaoameise"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "menschenfloh.jpg", "name": "Menschenfloh"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "katzenfloh.jpg", "name": "Katzenfloh"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "hausbock.jpg", "name": "Hausbock"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "gemeiner_nagekaefer.jpg", "name": "Gemeiner Nagekäfer"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "kleidermotte.jpg", "name": "Kleidermotte"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "pelzmotte.jpg", "name": "Pelzmotte"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "deutsche_wespe.jpg", "name": "Deutsche Wespe"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "gemeine_wespe.jpg", "name": "Gemeine Wespe"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "hausmuecke.jpg", "name": "Hausmücke"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "silberfischchen.jpg", "name": "Silberfischchen"},</p>
-<p class="p1"><span class="Apple-converted-space">  </span>{"bild": "maeuseassel.jpg", "name": "Mäuseassel"}</p>
-<p class="p1">];</p>
+<p class="p1">{"image": "reismehlkaefer.jpg", "name": "Reismehlkäfer"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "brotkaefer.jpg", "name": "Brotkäfer"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "mehlkaefer.jpg", "name": "Mehlkäfer"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "getreideplattkaefer.jpg", "name": "Getreideplattkäfer"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "kornkaefer.jpg", "name": "Kornkäfer"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "reiskaefer.jpg", "name": "Reiskäfer"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "doerrobstmotte.jpg","name": "Dörrobstmotte"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "mehlmotte.jpg", "name": "Mehlmotte"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "kakaomotte.jpg", "name":"Kakaomotte"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "mehlmilbe.jpg", "name": "Mehlmilbe"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "stubenfliege.jpg", "name": „Stubenfliege"},</p>
+<p class="p1">{"image": "schmeissfliege.jpg", "name": "Schmeißfliege"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "fruchtfliege.jpg", "name": "Fruchtfliege"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "deutsche_schabe.jpg", "name": "Deutsche Schabe"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "orientalische_schabe.jpg", "name": "Orientalische Schabe"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "amerikanische_schabe.jpg", "name": "Amerikanische Schabe"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "schwarze_wegameise.jpg","name": "Schwarze Wegameise"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "pharaoameise.jpg", "name": "Pharaoameise"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "menschenfloh.jpg","name": "Menschenfloh"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "katzenfloh.jpg", "name": "Katzenfloh"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "hausbock.jpg", "name":"Hausbock"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "gemeiner_nagekaefer.jpg", "name": "Gemeiner Nagekäfer"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "kleidermotte.jpg", "name":"Kleidermotte"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "pelzmotte.jpg", "name": "Pelzmotte"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "deutsche_wespe.jpg", "name": "Deutsche Wespe"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "gemeine_wespe.jpg", "name": "Gemeine Wespe"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "hausmuecke.jpg", "name":"Hausmücke"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "silberfischchen.jpg", "name": "Silberfischchen"},<span class="Apple-converted-space"> </span></p>
+<p class="p1">{"image": "maeuseassel.jpg", „name":"Mäuseassel"},</p>
+<p class="p1"><span class="Apple-converted-space">    </span>];</p>
 <p class="p2"><br></p>
 <p class="p1"><span class="Apple-converted-space">    </span>const quizDiv = document.getElementById('quiz');</p>
 <p class="p1"><span class="Apple-converted-space">    </span>const imgElement = document.getElementById('insect-image');</p>
