--- a/index.html
+++ b/index.html
@@ -31,35 +31,35 @@
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;script&gt;</p>
 <p class="p1"><span class="Apple-converted-space">    </span>// Datenbank der Insekten</p>
 <p class="p1"><span class="Apple-converted-space">    </span>const insects = [</p>
-<p class="p1">{"image": "reismehlkaefer.jpg", "name": "Reismehlkäfer"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "brotkaefer.jpg", "name": "Brotkäfer"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "mehlkaefer.jpg", "name": "Mehlkäfer"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "getreideplattkaefer.jpg", "name": "Getreideplattkäfer"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "kornkaefer.jpg", "name": "Kornkäfer"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "reiskaefer.jpg", "name": "Reiskäfer"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "doerrobstmotte.jpg","name": "Dörrobstmotte"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "mehlmotte.jpg", "name": "Mehlmotte"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "kakaomotte.jpg", "name":"Kakaomotte"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "mehlmilbe.jpg", "name": "Mehlmilbe"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "stubenfliege.jpg", "name": „Stubenfliege"},</p>
-<p class="p1">{"image": "schmeissfliege.jpg", "name": "Schmeißfliege"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "fruchtfliege.jpg", "name": "Fruchtfliege"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "deutsche_schabe.jpg", "name": "Deutsche Schabe"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "orientalische_schabe.jpg", "name": "Orientalische Schabe"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "amerikanische_schabe.jpg", "name": "Amerikanische Schabe"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "schwarze_wegameise.jpg","name": "Schwarze Wegameise"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "pharaoameise.jpg", "name": "Pharaoameise"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "menschenfloh.jpg","name": "Menschenfloh"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "katzenfloh.jpg", "name": "Katzenfloh"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "hausbock.jpg", "name":"Hausbock"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "gemeiner_nagekaefer.jpg", "name": "Gemeiner Nagekäfer"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "kleidermotte.jpg", "name":"Kleidermotte"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "pelzmotte.jpg", "name": "Pelzmotte"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "deutsche_wespe.jpg", "name": "Deutsche Wespe"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "gemeine_wespe.jpg", "name": "Gemeine Wespe"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "hausmuecke.jpg", "name":"Hausmücke"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "silberfischchen.jpg", "name": "Silberfischchen"},<span class="Apple-converted-space"> </span></p>
-<p class="p1">{"image": "maeuseassel.jpg", „name":"Mäuseassel"},</p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "reismehlkaefer.jpg", "name": "Reismehlkäfer"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "brotkaefer.jpg", "name": "Brotkäfer"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "mehlkaefer.jpg", "name": "Mehlkäfer"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "getreideplattkaefer.jpg", "name": "Getreideplattkäfer"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "kornkaefer.jpg", "name": "Kornkäfer"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "reiskaefer.jpg", "name": "Reiskäfer"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "doerrobstmotte.jpg", "name": "Dörrobstmotte"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "mehlmotte.jpg", "name": "Mehlmotte"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "kakaomotte.jpg", "name": "Kakaomotte"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "mehlmilbe.jpg", "name": "Mehlmilbe"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "stubenfliege.jpg", "name": "Stubenfliege"},</p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "schmeissfliege.jpg", "name": "Schmeißfliege"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "fruchtfliege.jpg", "name": "Fruchtfliege"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "deutsche_schabe.jpg", "name": "Deutsche Schabe"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "orientalische_schabe.jpg", "name": "Orientalische Schabe"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "amerikanische_schabe.jpg", "name": "Amerikanische Schabe"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "schwarze_wegameise.jpg", "name": "Schwarze Wegameise"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "pharaoameise.jpg", "name": "Pharaoameise"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "menschenfloh.jpg", "name": "Menschenfloh"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "katzenfloh.jpg", "name": "Katzenfloh"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "hausbock.jpg", "name": "Hausbock"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "gemeiner_nagekaefer.jpg", "name": "Gemeiner Nagekäfer"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "kleidermotte.jpg", "name": "Kleidermotte"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "pelzmotte.jpg", "name": "Pelzmotte"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "deutsche_wespe.jpg", "name": "Deutsche Wespe"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "gemeine_wespe.jpg", "name": "Gemeine Wespe"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "hausmuecke.jpg", "name": "Hausmücke"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "silberfischchen.jpg", "name": "Silberfischchen"},<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="Apple-converted-space">      </span>{"image": "maeuseassel.jpg", "name": "Mäuseassel"}</p>
 <p class="p1"><span class="Apple-converted-space">    </span>];</p>
 <p class="p2"><br></p>
 <p class="p1"><span class="Apple-converted-space">    </span>const quizDiv = document.getElementById('quiz');</p>
