--- a/index.html
+++ b/index.html
@@ -33,16 +33,7 @@
 <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>// Datenbank der Insekten</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>const insects = [</span></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>{"image": "reismehlkaefer.jpg", "name": "Reismehlkäfer"},<span class="Apple-converted-space"> </span></span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>{"image": "brotkaefer.jpg", "name": "Brotkäfer"},<span class="Apple-converted-space"> </span></span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>{"image": "mehlkaefer.jpg", "name": "Mehlkäfer"},<span class="Apple-converted-space"> </span></span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>{"image": "getreideplattkaefer.jpg", "name": "Getreideplattkäfer"},<span class="Apple-converted-space"> </span></span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>{"image": "kornkaefer.jpg", "name": "Kornkäfer"},<span class="Apple-converted-space"> </span></span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>{"image": "reiskaefer.jpg", "name": "Reiskäfer"},<span class="Apple-converted-space"> </span></span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>{"image": "doerrobstmotte.jpg", "name": "Dörrobstmotte"},<span class="Apple-converted-space"> </span></span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>{"image": "mehlmotte.jpg", "name": "Mehlmotte"},<span class="Apple-converted-space"> </span></span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>{"image": "kakaomotte.jpg", "name": "Kakaomotte"},<span class="Apple-converted-space"> </span></span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>{"image": "mehlmilbe.jpg", "name": "Mehlmilbe"},<span class="Apple-converted-space"> </span></span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>{"image": "stubenfliege.jpg", "name": "Stubenfliege"},</span></p>
+<p class="p2"><span class="s1"></span><br></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>];</span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>const quizDiv = document.getElementById('quiz');</span></p>
