--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
         button.textContent = option.name;
         button.onclick = () => {
           if (option.name === correct.name) {
-            alert("Richtig!");
+            startQuiz(); // Direkt zur nächsten Frage springen.
+
           } else {
             alert("Falsch! Die richtige Antwort war: " + correct.name);
           }
