--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
       { "image": "hausmuecke.jpg", "name": "Hausmücke" },
       { "image": "silberfischchen.jpg", "name": "Silberfischchen" },
       { "image": "maeuseassel.jpg", "name": "Mäuseassel" }
+      { "image": "wollkrautbluetenkaefer.jpg", "name": "Wollkraublütenkäfer" }
+      { "image": "wollkrautbluetenkaefer_larve.jpg", "name": "Wollkraublütenkäfer Larve" }
+      { "image": "papierfischchen.jpg", "name": "Papierfischchen" }
+      { "image": "Nest_saechsische_wespe.jpg", "name": "Nest Sächsische Wespe" }
+      { "image": "feldwespe.jpg", "name": "feldwespe" }
+      { "image": "feldwespe_nest.jpg", "name": "Nest Feldwespe" } 
     ];
 
     const quizDiv = document.getElementById("quiz");
